--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="info__wrap">
                 <div class="news">
-                    <div class="info__h">
+                    <div class="news__h">
                         Lorem ipsum dolor sit amet, consectetur adipiscing
                     </div>
                     <p class="news__p">
